- Update config files (CONFIG_CRASHER=m). - patches.suse/crasher-26.diff: slab testing module.
suse-commit: fd30a8367652354671a8da8681f7e297d6a6534f

--- a/drivers/char/Kconfig
+++ b/drivers/char/Kconfig
@@ -1020,5 +1020,10 @@ config TELCLOCK
 	  sysfs directory, /sys/devices/platform/telco_clock, with a number of
 	  files for controlling the behavior of this hardware.
 
+config CRASHER
+	tristate "Crasher Module"
+	help
+	  Slab cache memory tester.  Only use this as a module
+
 endmenu
 
