--- a/arch/x86_64/Kconfig
+++ b/arch/x86_64/Kconfig
@@ -284,7 +284,7 @@ config SMP
 
 config SCHED_SMT
 	bool "SMT (Hyperthreading) scheduler support"
-	depends on SMP && !X86_64_XEN
+	depends on SMP
 	default n
 	help
 	  SMT scheduler support improves the CPU scheduler's decision making
@@ -294,7 +294,7 @@ config SCHED_SMT
 
 config SCHED_MC
 	bool "Multi-core scheduler support"
-	depends on SMP && !X86_64_XEN
+	depends on SMP
 	default y
 	help
 	  Multi-core scheduler support improves the CPU scheduler's decision
@@ -305,7 +305,7 @@ source "kernel/Kconfig.preempt"
 
 config NUMA
        bool "Non Uniform Memory Access (NUMA) Support"
-       depends on SMP && !X86_64_XEN
+       depends on SMP
        help
 	 Enable NUMA (Non Uniform Memory Access) support. The kernel 
 	 will try to allocate memory used by a CPU on the local memory 
@@ -390,7 +390,6 @@ config NR_CPUS
 	int "Maximum number of CPUs (2-256)"
 	range 2 255
 	depends on SMP
-	default "16" if X86_64_XEN
 	default "8"
 	help
 	  This allows you to specify the maximum number of CPUs which this
@@ -450,7 +449,7 @@ config CALGARY_IOMMU
 	bool "IBM Calgary IOMMU support"
 	default y
 	select SWIOTLB
-	depends on PCI && !X86_64_XEN && EXPERIMENTAL
+	depends on PCI && EXPERIMENTAL
 	help
 	  Support for hardware IOMMUs in IBM's xSeries x366 and x460
 	  systems. Needed to run systems with more than 3GB of memory
@@ -497,7 +496,7 @@ config X86_MCE_AMD
 
 config KEXEC
 	bool "kexec system call (EXPERIMENTAL)"
-	depends on EXPERIMENTAL && !X86_64_XEN
+	depends on EXPERIMENTAL
 	help
 	  kexec is a system call that implements the ability to shutdown your
 	  current kernel, and to start another kernel.  It is like a reboot
@@ -600,9 +599,7 @@ endif
 
 source "drivers/acpi/Kconfig"
 
-if !X86_64_XEN
 source "arch/x86_64/kernel/cpufreq/Kconfig"
-endif
 
 endmenu
 
