- patches.arch/x86-vmware-tsc-01-add-TSC_RELIABLE,   patches.arch/x86-vmware-tsc-02-add-X86_FEATURE_HYPERVISOR,   patches.arch/x86-vmware-tsc-03-detect-from-hypervisor,   patches.arch/x86-vmware-tsc-04-use-TSC_RELIABLE,   patches.arch/x86-vmware-tsc-05-skip-tsc-clocksource,   patches.arch/x86-vmware-tsc-06-fix-vmware_get_tsc,   patches.arch/x86-vmware-tsc-07-DMI-product-serial-key,   patches.xen/xen-x86-vmware-tsc-fix:     VMware tsc clocksource workaround (bnc#441338).
suse-commit: ed96809bd96ce92d09f73a39b5b589549b3d3723

--- a/arch/x86/kernel/cpu/Makefile
+++ b/arch/x86/kernel/cpu/Makefile
@@ -4,6 +4,7 @@
 
 obj-y			:= intel_cacheinfo.o addon_cpuid_features.o
 obj-y			+= proc.o feature_names.o
+obj-y			+= vmware.o hypervisor.o
 
 obj-$(CONFIG_X86_32)	+= common.o bugs.o
 obj-$(CONFIG_X86_64)	+= common_64.o bugs_64.o
