--- a/drivers/scsi/Kconfig
+++ b/drivers/scsi/Kconfig
@@ -328,19 +328,6 @@ menuconfig SCSI_LOWLEVEL
 
 if SCSI_LOWLEVEL && SCSI
 
-config LIBFC
-	tristate "LibFC module"
-	depends on SCSI && SCSI_FC_ATTRS
-	---help---
-	  Fibre Channel library module
-
-config FCOE
-	tristate "FCoE module"
-	depends on SCSI && SCSI_FC_ATTRS
-	select LIBFC
-	---help---
-	  Fibre Channel over Ethernet module
-
 config ISCSI_TCP
 	tristate "iSCSI Initiator over TCP/IP"
 	depends on SCSI && INET
@@ -617,6 +604,20 @@ config SCSI_FLASHPOINT
 	  BusLogic SCSI driver. The FlashPoint SCCB Manager code is
 	  substantial, so users of MultiMaster Host Adapters may not
 	  wish to include it.
+
+config LIBFC
+	tristate "LibFC module"
+	depends on SCSI && SCSI_FC_ATTRS
+	---help---
+	  Fibre Channel library module
+
+config FCOE
+	tristate "FCoE module"
+	depends on SCSI
+	select LIBFC
+	---help---
+	  Fibre Channel over Ethernet module
+
 
 config SCSI_DMX3191D
 	tristate "DMX3191D SCSI support"
