--- a/drivers/scsi/libfc/Makefile
+++ b/drivers/scsi/libfc/Makefile
@@ -5,6 +5,7 @@ obj-$(CONFIG_LIBFC) += libfc.o
 libfc-objs := \
 	fc_disc.o \
 	fc_exch.o \
+	fc_elsct.o \
 	fc_frame.o \
 	fc_lport.o \
 	fc_rport.o \
