--- a/arch/x86/kernel/Makefile
+++ b/arch/x86/kernel/Makefile
@@ -104,11 +104,12 @@ obj-$(CONFIG_X86_XEN)		+= fixup.o
 ###
 # 64 bit specific files
 ifeq ($(CONFIG_X86_64),y)
-        obj-$(CONFIG_X86_LOCAL_APIC)	+= genapic_64.o genapic_flat_64.o genx2apic_uv_x.o
-	obj-$(CONFIG_X86_XEN_GENAPIC)	+= genapic_64.o genapic_xen_64.o
+        obj-y				+= genapic_64.o genapic_flat_64.o genx2apic_uv_x.o
+        obj-$(CONFIG_X86_XEN_GENAPIC)	+= genapic_64.o genapic_xen_64.o
+        obj-y				+= uv_sysfs.o
         obj-y				+= genx2apic_cluster.o
         obj-y				+= genx2apic_phys.o
-	obj-y				+= tlb_uv.o bios_uv.o
+	obj-y				+= tlb_uv.o bios_uv.o uv_irq.o
         obj-$(CONFIG_X86_PM_TIMER)	+= pmtimer_64.o
         obj-$(CONFIG_AUDIT)		+= audit_64.o
 
@@ -125,5 +126,5 @@ endif
 
 disabled-obj-$(CONFIG_XEN) := bios_uv.o early-quirks.o genapic_flat_64.o \
 	genx2apic_%.o hpet.o i8253.o i8259.o irqinit_$(BITS).o \
-	pci-swiotlb_64.o reboot.o smpboot.o tlb_$(BITS).o tlb_uv.o tsc.o \
-	tsc_sync.o vsmp_64.o
+	pci-swiotlb_64.o reboot.o smpboot.o tlb_$(BITS).o tlb_uv.o uv_irq.o tsc.o \
+	tsc_sync.o vsmp_64.o uv_sysfs.o
