- Update Xen patches to c/s 728 (plus several indivual ones) - patches.xen/735-balloon-exit.patch: remove sysfs files during balloon   module exit. - patches.xen/737-kexec-free.patch: kexec: Don't pass   limit_pages_to_max_mfn() regions to xen_destroy_contiguous_region(). - patches.xen/740-blkback-resource-leak.patch: blkback, blktap: Fix   potential resource leak. - patches.xen/746-pirq-status-page.patch: use shared page indicating   the need for an EOI notification - patches.xen/747-x86-undo-mfn-limit.patch: revert the effect of   xen_limit_pages_to_max_mfn() - patches.xen/748-x86-ioapic-cleanup.patch: cleanup IO-APIC code - patches.xen/panic-on-io-nmi-xen.diff: Rename to ... - patches.xen/xen3-panic-on-io-nmi.diff: ... this. - patches.xen/uv-sysfs-no-xen.diff: Replace by ... - patches.xen/xen3-uv_setup_irq.diff: ... this. - patches.xen/xen3-x86_sgi_uv_early_detect_oem.patch: x86, uv:   add early detection of UV system types (bnc#429984). - patches.xen/xen-fb-bad-irq: Delete.
suse-commit: 231a94e7a04000fd5eeef95b84f6cdc5c81492e6

--- a/arch/x86/kernel/Makefile
+++ b/arch/x86/kernel/Makefile
@@ -104,12 +104,12 @@ obj-$(CONFIG_X86_XEN)		+= fixup.o
 ###
 # 64 bit specific files
 ifeq ($(CONFIG_X86_64),y)
-        obj-y				+= genapic_64.o genapic_flat_64.o genx2apic_uv_x.o
-        obj-$(CONFIG_X86_XEN_GENAPIC)	+= genapic_64.o genapic_xen_64.o
-        obj-y				+= uv_sysfs.o
+	obj-$(CONFIG_X86_LOCAL_APIC)	+= genapic_64.o genapic_flat_64.o genx2apic_uv_x.o
+	obj-$(CONFIG_X86_XEN_GENAPIC)	+= genapic_64.o genapic_xen_64.o
+	obj-y				+= tlb_uv.o uv_sysfs.o
         obj-y				+= genx2apic_cluster.o
         obj-y				+= genx2apic_phys.o
-	obj-y				+= tlb_uv.o bios_uv.o uv_irq.o
+	obj-y				+= bios_uv.o uv_irq.o
         obj-$(CONFIG_X86_PM_TIMER)	+= pmtimer_64.o
         obj-$(CONFIG_AUDIT)		+= audit_64.o
 
@@ -124,7 +124,7 @@ ifeq ($(CONFIG_X86_64),y)
 	time_64-$(CONFIG_XEN)		+= time_32.o
 endif
 
-disabled-obj-$(CONFIG_XEN) := bios_uv.o early-quirks.o genapic_flat_64.o \
+disabled-obj-$(CONFIG_XEN) := %_uv.o early-quirks.o genapic_flat_64.o \
 	genx2apic_%.o hpet.o i8253.o i8259.o irqinit_$(BITS).o \
-	pci-swiotlb_64.o reboot.o smpboot.o tlb_$(BITS).o tlb_uv.o uv_irq.o tsc.o \
-	tsc_sync.o vsmp_64.o uv_sysfs.o
+	pci-swiotlb_64.o reboot.o smpboot.o tlb_$(BITS).o tsc.o tsc_sync.o \
+	uv_%.o vsmp_64.o
