XFS update on request from SGI: - patches.apparmor/vfs-notify_change.diff: Add a vfsmount   parameter to notify_change(). (refreshed) - patches.suse/xfs-account-for-allocated-blocks-when-expanding-directories:   Account for allocated blocks when expanding directories   (bnc#450658). - patches.suse/xfs-check-for-valid-transaction-headers-in-recovery:   XFS: Check for valid transaction headers in recovery   (bnc#450658). - patches.suse/xfs-dmapi-enable: VFS changes to support DMAPI   (bnc#450658). - patches.suse/xfs-dmapi-src: DMAPI Source  (bnc#450658). - patches.suse/xfs-dmapi-xfs-enable: DMAPI support for xfs   (bnc#450658). - patches.suse/xfs-handle-memory-allocation-failures-during-log-initialisation:   handle memory allocation failures during log initialisation   (bnc#450658). - patches.suse/xfs-nfsd-dmapi-aware: Make NFSD DMAPI aware   (74107, 173874, bnc#450658). - patches.suse/xfs-wait-for-all-IO-on-truncate-to-zero: Wait   for all I/O on truncate to zero file size (bnc#450658). - patches.suse/xfs-dmapi-2.6.27: Delete. - patches.suse/xfs-dmapi-xfs-2.6.27: Delete.
suse-commit: d492dfa9a5934a44c92df3b97ff45e8ace251ca8

--- a/fs/xfs/Kconfig
+++ b/fs/xfs/Kconfig
@@ -36,7 +36,7 @@ config XFS_QUOTA
 	  they are completely independent subsystems.
 
 config XFS_DMAPI
-	bool "XFS DMAPI support"
+	tristate "XFS DMAPI support"
 	depends on XFS_FS
 	select DMAPI
 	help
