- Update config files. - patches.drivers/staging-add-serverengines-benet-10gb-ethernet-driver.patch:   Staging: Add ServerEngines benet 10Gb ethernet driver.
suse-commit: a12a437e81369284841d63faf8291579885a656f

--- a/drivers/staging/Kconfig
+++ b/drivers/staging/Kconfig
@@ -49,4 +49,6 @@ source "drivers/staging/otus/Kconfig"
 
 source "drivers/staging/rt2860/Kconfig"
 
+source "drivers/staging/benet/Kconfig"
+
 endif # STAGING
