- Update config files. - patches.drivers/staging-add-rtl8187se-driver.patch: Staging:   add rtl8187se driver.  Needed for MSI Wind and other netbooks.
suse-commit: 3ccdeec8f59c13035592e7760e24124dd9db94d9

--- a/drivers/staging/Kconfig
+++ b/drivers/staging/Kconfig
@@ -51,4 +51,6 @@ source "drivers/staging/rt2860/Kconfig"
 
 source "drivers/staging/benet/Kconfig"
 
+source "drivers/staging/rtl8187se/Kconfig"
+
 endif # STAGING
