- patches.xen/xen-configurable-guest-devices: fix a typo.
suse-commit: 59f7c4a92e601a5d1f1fca913d32fa41b5a5cf08

--- a/drivers/xen/Kconfig
+++ b/drivers/xen/Kconfig
@@ -266,7 +266,7 @@ config XEN_SYSFS
 
 config XEN_NR_GUEST_DEVICES
 	int "Number of guest devices"
-	range 0 4032 if CONFIG_64BIT
+	range 0 4032 if 64BIT
 	range 0 960
 	default 256 if XEN_BACKEND
 	default 16
