- patches.suse/perfmon2-add_ioctl_interface.patch: switch to   ioctl interface for perfmon2. - patches.suse/perfmon2-fix_disabled.patch: fix initializion of   perfmon disabled. - patches.suse/perfmon2-remove_get_base_syscall_attr.patch:   remove perfmon syscall_base attribyute. - patches.suse/perfmon2-remove_syscalls.patch: drop additional   perfmon2 syscalls. - patches.xen/xen3-perfmon2_remove_syscalls.patch: drop additional   perfmon2 syscalls.
suse-commit: 52970fae27749478e86a9558ba81c95a07653278

--- a/perfmon/Makefile
+++ b/perfmon/Makefile
@@ -7,6 +7,7 @@ obj-y = perfmon_init.o perfmon_rw.o perfmon_res.o           \
 	perfmon_file.o perfmon_ctxsw.o perfmon_intr.o	    \
 	perfmon_dfl_smpl.o perfmon_sets.o perfmon_hotplug.o \
 	perfmon_msg.o perfmon_smpl.o perfmon_attach.o       \
-	perfmon_activate.o perfmon_ctx.o perfmon_fmt.o
+	perfmon_activate.o perfmon_ctx.o perfmon_fmt.o	    \
+	perfmon_control.o
 
 obj-$(CONFIG_PERFMON_DEBUG_FS) +=  perfmon_debugfs.o
