- patches.fixes/block-integrity-update: Block integrity update   (FATE#304345). - patches.suse/dm-block-integrity: Block integrity support for   DM and MD (FATE#304345). - patches.suse/dm-mpath-add-start-io: dm-mpath: add a path   selector interface (FATE#303862,FATE#302108). - patches.suse/dm-mpath-queue-length-load-balancing: dm-mpath: add   queue-length dynamic load balancer (FATE#303862,FATE#302108). - patches.suse/dm-mpath-service-time-load-balancing:   dm-mpath: add service-time oriented dynamic load balancer   (FATE#303862,FATE#302108). - patches.suse/dm-mpath-tracking-nr-bytes: dm-mpath:   interface change for service-time dynamic load balancer   (FATE#303862,FATE#302108). - supported.conf: Update to correctly reference dynamic load   balancer modules (bnc#444199)
suse-commit: 9d35ca42c94402c3d49e62c5344aa153ece0dd47

--- a/drivers/md/Makefile
+++ b/drivers/md/Makefile
@@ -32,7 +32,9 @@ obj-$(CONFIG_BLK_DEV_MD)	+= md-mod.o
 obj-$(CONFIG_BLK_DEV_DM)	+= dm-mod.o
 obj-$(CONFIG_DM_CRYPT)		+= dm-crypt.o
 obj-$(CONFIG_DM_DELAY)		+= dm-delay.o
-obj-$(CONFIG_DM_MULTIPATH)	+= dm-multipath.o dm-round-robin.o dm-leastpending-path.o
+obj-$(CONFIG_DM_MULTIPATH)	+= dm-multipath.o dm-round-robin.o \
+				   dm-leastpending-path.o dm-queue-length.o \
+				   dm-service-time.o
 obj-$(CONFIG_DM_SNAPSHOT)	+= dm-snapshot.o
 obj-$(CONFIG_DM_MIRROR)		+= dm-mirror.o dm-regions.o dm-log.o
 obj-$(CONFIG_DM_RAID45)		+= dm-raid45.o dm-log.o dm-memcache.o \
