- patches.xen/746-pirq-status-page.patch: Merge in c/s 751. - patches.xen/761-highpte.patch: blktap, gntdev: fix highpte handling. - patches.xen/762-xencons-hvc.patch: add hvc compatibility mode to xencons. - patches.xen/xen3-patch-2.6.27.7-8: Linux 2.6.27.8. - patches.xen/xen3-patch-2.6.27.8-9: Linux 2.6.27.9. - patches.xen/xen-x86-exports: export a few more symbols   (bnc#458222). - patches.xen/xen3-perfmon2_remove_syscalls.patch: Rename to ... - patches.xen/xen3-perfmon2-remove_syscalls.patch: ... this.
suse-commit: e4bc1a1129efed1bda0c5a3b8a77b3b6fd0af100

--- a/drivers/xen/Kconfig
+++ b/drivers/xen/Kconfig
@@ -15,7 +15,6 @@ menu "XEN"
 
 config XEN_PRIVILEGED_GUEST
 	bool "Privileged Guest (domain 0)"
-	select PCI_REASSIGN if PCI
 	help
 	  Support for privileged operation (domain 0)
 
@@ -110,8 +109,9 @@ config XEN_NETDEV_LOOPBACK
 
 config XEN_PCIDEV_BACKEND
 	tristate "PCI-device backend driver"
-	depends on PCI && XEN_BACKEND
+	depends on PCI && XEN_PRIVILEGED_GUEST && XEN_BACKEND
 	default XEN_BACKEND
+	select PCI_REASSIGN
 	help
 	  The PCI device backend driver allows the kernel to export arbitrary
 	  PCI devices to other guests. If you select this to be a module, you
@@ -121,8 +121,8 @@ config XEN_PCIDEV_BACKEND
 choice
 	prompt "PCI Backend Mode"
 	depends on XEN_PCIDEV_BACKEND
-	default XEN_PCIDEV_BACKEND_VPCI if !IA64
 	default XEN_PCIDEV_BACKEND_CONTROLLER if IA64
+	default XEN_PCIDEV_BACKEND_VPCI
 
 config XEN_PCIDEV_BACKEND_VPCI
 	bool "Virtual PCI"
