- Update config files. - patches.drivers/staging-add-rt2870-wireless-driver.patch:   Staging: add rt2870 wireless driver.
suse-commit: ba7c2d2e0dd83675c8717f73b5eeaf5fd2981da8

--- a/drivers/staging/Makefile
+++ b/drivers/staging/Makefile
@@ -16,5 +16,6 @@ obj-$(CONFIG_USB_ATMEL)		+= at76_usb/
 obj-$(CONFIG_AGNX)		+= agnx/
 obj-$(CONFIG_OTUS)		+= otus/
 obj-$(CONFIG_RT2860)		+= rt2860/
+obj-$(CONFIG_RT2870)		+= rt2870/
 obj-$(CONFIG_BENET)		+= benet/
 obj-$(CONFIG_RTL8187SE)		+= rtl8187se/
