--- a/drivers/staging/Kconfig
+++ b/drivers/staging/Kconfig
@@ -49,6 +49,8 @@ source "drivers/staging/otus/Kconfig"
 
 source "drivers/staging/rt2860/Kconfig"
 
+source "drivers/staging/rt2870/Kconfig"
+
 source "drivers/staging/benet/Kconfig"
 
 source "drivers/staging/rtl8187se/Kconfig"
