drm/amd/display: add DCN support for aarch64
This adds ARM64 support into the DCN. This mainly enables support
for Navi graphics cards. The dcn10 changes haven't been tested,
since I don't have the relevant hardware available, but there
is no way to conditionally disable them, so I've done them anyway.

Signed-off-by: Daniel Kolesa <daniel@octaforge.org>
Signed-off-by: Alex Deucher <alexander.deucher@amd.com>
Change-Id: I1470389ac0b6ee2d1a2e1b0f7b244c55bec2e4a5

--- a/drivers/gpu/drm/amd/display/dc/dcn21/Makefile
+++ b/drivers/gpu/drm/amd/display/dc/dcn21/Makefile
@@ -19,6 +19,10 @@ ifdef CONFIG_PPC64
 CFLAGS_$(AMDKCL_KBUILD_TAKE_PATH_CURRENT)dcn21_resource.o := -mhard-float -maltivec
 endif
 
+ifdef CONFIG_ARM64
+CFLAGS_REMOVE_$(AMDKCL_KBUILD_TAKE_PATH_CURRENT)dcn21_resource.o := -mgeneral-regs-only
+endif
+
 ifeq ($(call cc-ifversion, -lt, 0701, y), y)
 IS_OLD_GCC = 1
 endif
