--- a/drivers/gpu/drm/amd/display/dc/calcs/Makefile
+++ b/drivers/gpu/drm/amd/display/dc/calcs/Makefile
@@ -39,6 +39,10 @@ ifdef CONFIG_PPC64
 calcs_ccflags := -mhard-float -maltivec
 endif
 
+ifdef CONFIG_ARM64
+calcs_rcflags := -mgeneral-regs-only
+endif
+
 ifeq ($(call cc-ifversion, -lt, 0701, y), y)
 IS_OLD_GCC = 1
 endif
@@ -57,6 +61,9 @@ endif
 CFLAGS_$(AMDKCL_KBUILD_TAKE_PATH_CURRENT)dcn_calcs.o := $(calcs_ccflags)
 CFLAGS_$(AMDKCL_KBUILD_TAKE_PATH_CURRENT)dcn_calc_auto.o := $(calcs_ccflags)
 CFLAGS_$(AMDKCL_KBUILD_TAKE_PATH_CURRENT)dcn_calc_math.o := $(calcs_ccflags) -Wno-tautological-compare
+CFLAGS_REMOVE_$(AMDKCL_KBUILD_TAKE_PATH_CURRENT)dcn_calcs.o := $(calcs_rcflags)
+CFLAGS_REMOVE_$(AMDKCL_KBUILD_TAKE_PATH_CURRENT)dcn_calc_auto.o := $(calcs_rcflags)
+CFLAGS_REMOVE_$(AMDKCL_KBUILD_TAKE_PATH_CURRENT)dcn_calc_math.o := $(calcs_rcflags)
 
 BW_CALCS = dce_calcs.o bw_fixed.o custom_float.o
 
