Revert "drm/amdkcl: cleanup LINUXINCLUDE in dkms package"
This reverts commit d96876c7258e640ad1e11be126f4a8c2fe725bd9.

Signed-off-by: Flora Cui <flora.cui@amd.com>

--- a/drivers/gpu/drm/amd/dkms/Makefile
+++ b/drivers/gpu/drm/amd/dkms/Makefile
@@ -179,6 +179,7 @@ endif
 
 LINUXINCLUDE := \
 	-I$(src)/include \
+	-I$(src)/include/drm \
 	-I$(src)/include/uapi \
 	-include $(src)/include/kcl/kcl_version.h \
 	-include $(src)/include/rename_symbol.h \
