drm/amdkcl: fix include path in schduler
Signed-off-by: Flora Cui <flora.cui@amd.com>
Reviewed-by: Yang Xiong <Yang.Xiong@amd.com>

--- a/drivers/gpu/drm/scheduler/Makefile
+++ b/drivers/gpu/drm/scheduler/Makefile
@@ -27,7 +27,6 @@
 #
 SCHED_NAME = gpu-sched
 
-ccflags-y := -Iinclude/drm
 $(SCHED_NAME)-y := sched_main.o sched_fence.o sched_entity.o
 
 obj-$(CONFIG_DRM_SCHED) += $(SCHED_NAME).o
@@ -37,4 +36,7 @@ SCHED_FULL_PATH := $(srctree)/$(src)
 else
 SCHED_FULL_PATH := $(src)
 endif
+
+ccflags-y := -I$(SCHED_FULL_PATH)
+
 include $(SCHED_FULL_PATH)/backport/Makefile
